Fixed visibility of the shortlist

--- a/css/style.css
+++ b/css/style.css
@@ -1256,9 +1256,8 @@ a:hover, a:focus {
 .shortlist {
   color: #FA2449;
   text-decoration: underline;
-  position: absolute;
-  top: 30px;
-  right: 0;
+  float: right;
+  margin-top: 30px;
 }
 .shortlist:hover, .shortlist:focus {
   color: #FA2449;
@@ -1268,6 +1267,11 @@ a:hover, a:focus {
   font-size: 14px;
 }
 
+@media (max-width: 767px) {
+  .shortlist {
+    margin-top: 5px;
+  }
+}
 .base_search {
   background-color: #FA2449;
   padding: 20px;
